--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-fontawesome": "^1.6.1",
     "react-modal": "^3.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
